adicionando profile dev e prod

--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -1,5 +1,8 @@
 # MySQL
-spring.datasource.url=mysql://bdce938816b823:ab8cf13f@us-cdbr-east-02.cleardb.com/heroku_7d3f3dd73f823f5?reconnect=true
+spring.datasource.url=jdbc:mysql://localhost:3306/carros?useSSL=false&allowPublicKeyRetrieval=true&useTimezone=true&serverTimezone=UTC
+spring.datasource.username=root
+spring.datasource.password=
+
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5InnoDBDialect
 
 #SQL.
